syntax = "proto3";
package org.monitoring.proto;

option java_package = "org.network.monitorandcontrol";
option java_multiple_files = true;

enum RequestType {
    DIVICE_DISCONNECT = 0;
    DEVICE_INFO = 1;
    PERIPHERAL_STATUS = 2;
    PARAMETER_VERSION = 3;
    ALARMS = 4;
    RESPONSE = 5;
//    OPERATION_MODE=6;
}

enum CommandType {
    UNKNOWN_COMMAND = 0;
    MODE_CONTROL = 1;
    GET_DEVICE_INFO = 2;
    GET_PERIPHERAL_STATUS = 3;
    GET_DIVICE_VERSIONS = 4;
}

enum OperationMode {
    IN_SERVICE = 0;
    OUT_OF_SERVICE = 1;
    MAINTENANCE = 2;
    TEST = 3;
}

enum SpecialMode {
    TIME_OVERRIDE = 0;
    ENTRY_EXIT_OVERRIDE = 1;
    EXCESS_FARE_OVERRIDE = 2;
    EMERGENCY = 3; //TOM and AG
    FARE_BYPASS_MODE_1 = 4;
    FARE_BYPASS_MODE_2 = 5;
    STATION_CLOSED_MODE = 6; //TOM and AG
    SHIFT_END = 7; //TOM
    SHUT_DOWN = 8; //TOM
    RESTART = 9; //TOM
}

enum DeviceType{
    TOM = 0;
    AG = 1;
}